# XBotInterface

./: .travis.yml  CMakeLists.txt  README.md  XBotInterfaceConfig.cmake.in  interactive_requirements.txt
IXBotInterface/: CMakeLists.txt
IXBotInterface/configs/: config_centauro.yaml  config_walkman.yaml  config_walkman_upper_body.yaml
IXBotInterface/configs/joint_map/: centauro_test_joint_map.yaml
IXBotInterface/configs/srdf/: bigman_config.srdf  bigman_config.srdf.xacro  centauro.srdf  centauro_upperbody.srdf
IXBotInterface/configs/urdf/: bigman_upper_body.urdf  centauro.urdf  centauro_upperbody.urdf
IXBotInterface/doc/: Doxyfile.in  XBotInterface.dox
IXBotInterface/examples/: CMakeLists.txt  ik_example.cpp
IXBotInterface/include/XBotInterface/: ForceTorqueSensor.h  IXBotInterface.h  Joint.h  KinChain.h  KinematicChain.h  ModelChain.h  ModelInterface.h  RobotChain.h  RobotInterface.h  RobotInterfaceROS.h
IXBotInterface/src/: ForceTorqueSensor.cpp  IXBotInterface.cpp  Joint.cpp  KinChain.cpp  KinematicChain.cpp  ModelChain.cpp  ModelInterface.cpp  RobotChain.cpp  RobotInterface.cpp  XBotInterface.cpp  main_test.cpp
IXBotInterface/tests/: CMakeLists.txt  testBasic.cpp
RobotInterfaceROS/: CMakeLists.txt
RobotInterfaceROS/configs/: ROSconfig.yaml
RobotInterfaceROS/include/RobotInterfaceROS/: RobotInterfaceROS.h
RobotInterfaceROS/src/: RobotInterfaceROS.cpp  test_ros.cpp
configs/: config_centauro.yaml  config_coman.yaml  config_walkman.yaml  config_walkman.yaml.orig  config_walkman_upper_body.yaml
configs/joint_map/: centauro_test_joint_map.yaml
configs/srdf/: bigman_config.srdf  bigman_config.srdf.orig  bigman_config.srdf.xacro  bigman_upper_body.srdf  centauro_upperbody.srdf
configs/urdf/: bigman.urdf
doc/: Doxyfile.in  XBotInterface.dox
docs/: ConfigHelper_8cpp.html  ConfigHelper_8cpp__incl.map  ConfigHelper_8cpp__incl.md5  ConfigHelper_8cpp_source.html  ConfigHelper_8h.html  ConfigHelper_8h__dep__incl.map  ConfigHelper_8h__dep__incl.md5  ConfigHelper_8h__incl.map  ConfigHelper_8h__incl.md5  ConfigHelper_8h_source.html  ControlMode_8cpp.html  ControlMode_8cpp__incl.map  ControlMode_8cpp__incl.md5  ControlMode_8cpp_source.html  ControlMode_8h.html  ControlMode_8h__dep__incl.map  ControlMode_8h__dep__incl.md5  ControlMode_8h__incl.md5  ControlMode_8h_source.html  ForceTorqueSensor_8cpp.html  ForceTorqueSensor_8cpp__incl.map  ForceTorqueSensor_8cpp__incl.md5  ForceTorqueSensor_8cpp_source.html  ForceTorqueSensor_8h.html  ForceTorqueSensor_8h__dep__incl.map  ForceTorqueSensor_8h__dep__incl.md5  ForceTorqueSensor_8h__incl.map  ForceTorqueSensor_8h__incl.md5  ForceTorqueSensor_8h_source.html  GenericSensor_8cpp.html  GenericSensor_8cpp__incl.map  GenericSensor_8cpp__incl.md5  GenericSensor_8cpp_source.html  GenericSensor_8h.html  GenericSensor_8h__dep__incl.map  GenericSensor_8h__dep__incl.md5  GenericSensor_8h__incl.md5  GenericSensor_8h_source.html  Hand_8cpp.html  Hand_8cpp__incl.map  (+1411 more)
docs/html/: ConfigHelper_8cpp.html  ConfigHelper_8cpp__incl.map  ConfigHelper_8cpp__incl.md5  ConfigHelper_8h__dep__incl.map  ConfigHelper_8h__dep__incl.md5  ConfigHelper_8h__incl.md5  ControlMode_8cpp.html  ControlMode_8cpp_source.html  ControlMode_8h__dep__incl.map  ControlMode_8h__incl.map  ControlMode_8h__incl.md5  ForceTorqueSensor_8cpp__incl.map  ForceTorqueSensor_8cpp__incl.md5  ForceTorqueSensor_8h__incl.md5  ForceTorqueSensor_8h_source.html  GenericSensor_8cpp__incl.map  GenericSensor_8cpp__incl.md5  GenericSensor_8h__dep__incl.md5  GenericSensor_8h__incl.map  GenericSensor_8h__incl.md5  ImuSensor_8h.html  ImuSensor_8h__dep__incl.md5  ImuSensor_8h__incl.md5  ImuSensor_8h_source.html  Joint_8cpp.html  Joint_8cpp_source.html  Joint_8h__dep__incl.md5  Joint_8h__incl.md5  Joint_8h_source.html  KinematicChain_8cpp__incl.map  KinematicChain_8cpp_source.html  KinematicChain_8h.html  KinematicChain_8h__incl.map  KinematicChain_8h_source.html  Logger_8hpp__dep__incl.map  ModelChain_8cpp_source.html  ModelChain_8h__dep__incl.map  ModelChain_8h_source.html  ModelInterface_8cpp__incl.md5  ModelInterface_8cpp_source.html  (+579 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_11.js  classes_12.js  classes_15.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+82 more)
examples/: CMakeLists.txt  Test.cpp  home_example.cpp  id_example.cpp  ik_example.cpp  log_example.cpp  read_example.cpp  state_machine_example.cpp
include/XBotInterface/: ConfigHelper.h  ControlMode.h  ForceTorqueSensor.h  GenericSensor.h  Hand.h  IXBotInterface.h  ImuSensor.h  Joint.h  KinematicChain.h  Logger.hpp  MatLogger.hpp  ModelChain.h  ModelInterface.h  RobotChain.h  RobotInterface.h  RtLog.hpp  SoLib.h  StateMachine.h  SyncFlags.h  Test.h  Thread.h  TypedefAndEnums.h  Utils.h  XBotInterface.h  sync_flags.h
src/: ConfigHelper.cpp  ControlMode.cpp  ForceTorqueSensor.cpp  GenericSensor.cpp  Hand.cpp  IXBotInterface.cpp  ImuSensor.cpp  Joint.cpp  KinematicChain.cpp  Logger.cpp  ModelChain.cpp  ModelInterface.cpp  RobotChain.cpp  RobotInterface.cpp  RtLog.cpp  XBotInterface.cpp  main_test.cpp
tests/: CMakeLists.txt  testBasic.cpp  testJoint.cpp  testKinematicChain.cpp  testModelInterface.cpp  testUtils.cpp  testXBotInterface.cpp
tests/configs/bigman/configs/: config_walkman.yaml  config_walkman_upper_body.yaml
tests/configs/bigman/srdf/: bigman.srdf  bigman.srdf.xacro
tests/configs/centauro/configs/: config_centauro_full_body.yaml  config_centauro_upperbody.yaml
tests/configs/centauro/joint_map/: centauro_test_joint_map_upperbody.yaml  centauro_upperbody_map.yaml
tests/configs/centauro/urdf/: centauro_full_with_imu.urdf
tests/configs/coman/configs/: config_coman.yaml
tests/configs/coman/joint_map/: coman_ecat_joint_map.yaml
(+79 files in other folders)
